@@ -433,7 +433,7 @@ chargalois(GEN G, GEN ORD)
 {
   pari_sp av = avma;
   long maxord, i, l;
-  GEN v, cyc = (typ(G) == t_VEC && RgV_is_ZV(G))? G: member_cyc(G);
+  GEN v, cyc = (typ(G) == t_VEC && RgV_is_ZVpos(G))? G: member_cyc(G);
   if (lg(cyc) == 1) retmkvec(cgetg(1,t_COL));
   maxord = itou(gel(cyc,1));
   if (ORD && gequal0(ORD)) ORD = NULL;
